fixed spacing

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -291,13 +291,13 @@ html {
     left: 35%;
     position: relative;
     min-height: 100vh;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
     border-bottom: 3px solid rgba(250, 250, 250, 0.25);
 }
 
 .section-heading {
     text-align: center;
-    padding: 80px 45px;
+    padding: 60px 40px;
 }
 
 .section-heading h2 {
@@ -383,7 +383,7 @@ button:hover {
 
 .right-image-post h4,
 .left-image-post h4 {
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 .right-image-post p,
